Changelog
=========

1.2 (unreleased)
----------------

- Show the offending url and use NotFound so we can suppress it in the error log

- fix apple icon url
  
- raise NotFound if key is not specified
  
- Simplify next/previous links
  
- patched to traverse relative urls from folder if content is not folderish

1.1
---

- zero padding for answer 

- disable folder listing

- fix NotFound import error

- change form action for search form to emas.search to enable
  redirection when a short code is entered.

1.0
---

- Initial release